Re-structured files
No idea how/if I can even merge this back into main

--- a/ui_styles.css
+++ b/ui_styles.css
@@ -1,13 +1,17 @@
 /*Edit Later*/
 
-.logo{
-    display: inline;              
-    height: 3em;                 
-    width: auto;                 
-    vertical-align: middle; 
+.logo {
+    display: inline;
+    height: 3em;
+    width: auto;
+    vertical-align: middle;
 }
 
-h1 p{
+h1 p {
     font-size: small;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.row {
+    display: inline-block;
 }
